networking/aws_vpc.tf
resource "aws_vpc" "nlvpc" {
  cidr_block = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support = true
}
